introduce micro-benchmarks and their results